OSMini/cliParserParser.cpp

// Generated from cliParser.g4 by ANTLR 4.5.3


#include "cliParserListener.h"
#include "cliParserVisitor.h"

#include "cliParserParser.h"


using namespace antlrcpp;
using namespace antlr4;

cliParserParser::cliParserParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

cliParserParser::~cliParserParser() {
  delete _interpreter;
}

std::string cliParserParser::getGrammarFileName() const {
  return "cliParser.g4";
}

const std::vector<std::string>& cliParserParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& cliParserParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StringContext ------------------------------------------------------------------

cliParserParser::StringContext::StringContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> cliParserParser::StringContext::LETTER() {
  return getTokens(cliParserParser::LETTER);
}

tree::TerminalNode* cliParserParser::StringContext::LETTER(size_t i) {
  return getToken(cliParserParser::LETTER, i);
}

std::vector<tree::TerminalNode *> cliParserParser::StringContext::NUMBER() {
  return getTokens(cliParserParser::NUMBER);
}

tree::TerminalNode* cliParserParser::StringContext::NUMBER(size_t i) {
  return getToken(cliParserParser::NUMBER, i);
}

std::vector<tree::TerminalNode *> cliParserParser::StringContext::WHITESPACE() {
  return getTokens(cliParserParser::WHITESPACE);
}

tree::TerminalNode* cliParserParser::StringContext::WHITESPACE(size_t i) {
  return getToken(cliParserParser::WHITESPACE, i);
}


size_t cliParserParser::StringContext::getRuleIndex() const {
  return cliParserParser::RuleString;
}

void cliParserParser::StringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterString(this);
}

void cliParserParser::StringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitString(this);
}


antlrcpp::Any cliParserParser::StringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitString(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::StringContext* cliParserParser::string() {
  StringContext *_localctx = _tracker.createInstance<StringContext>(_ctx, getState());
  enterRule(_localctx, 0, cliParserParser::RuleString);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    match(cliParserParser::T__0);
    setState(38); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(37);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << cliParserParser::NUMBER)
        | (1ULL << cliParserParser::WHITESPACE)
        | (1ULL << cliParserParser::LETTER))) != 0))) {
      _errHandler->recoverInline(this);
      } else {
        consume();
      }
      setState(40); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cliParserParser::NUMBER)
      | (1ULL << cliParserParser::WHITESPACE)
      | (1ULL << cliParserParser::LETTER))) != 0));
    setState(42);
    match(cliParserParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprMContext ------------------------------------------------------------------

cliParserParser::ExprMContext::ExprMContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cliParserParser::TermContext *> cliParserParser::ExprMContext::term() {
  return getRuleContexts<cliParserParser::TermContext>();
}

cliParserParser::TermContext* cliParserParser::ExprMContext::term(size_t i) {
  return getRuleContext<cliParserParser::TermContext>(i);
}

std::vector<tree::TerminalNode *> cliParserParser::ExprMContext::PLUS() {
  return getTokens(cliParserParser::PLUS);
}

tree::TerminalNode* cliParserParser::ExprMContext::PLUS(size_t i) {
  return getToken(cliParserParser::PLUS, i);
}

std::vector<tree::TerminalNode *> cliParserParser::ExprMContext::MINUS() {
  return getTokens(cliParserParser::MINUS);
}

tree::TerminalNode* cliParserParser::ExprMContext::MINUS(size_t i) {
  return getToken(cliParserParser::MINUS, i);
}


size_t cliParserParser::ExprMContext::getRuleIndex() const {
  return cliParserParser::RuleExprM;
}

void cliParserParser::ExprMContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprM(this);
}

void cliParserParser::ExprMContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprM(this);
}


antlrcpp::Any cliParserParser::ExprMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitExprM(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::ExprMContext* cliParserParser::exprM() {
  ExprMContext *_localctx = _tracker.createInstance<ExprMContext>(_ctx, getState());
  enterRule(_localctx, 2, cliParserParser::RuleExprM);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    term();
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == cliParserParser::PLUS

    || _la == cliParserParser::MINUS) {
      setState(45);
      _la = _input->LA(1);
      if (!(_la == cliParserParser::PLUS

      || _la == cliParserParser::MINUS)) {
      _errHandler->recoverInline(this);
      } else {
        consume();
      }
      setState(46);
      term();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VaridContext ------------------------------------------------------------------

cliParserParser::VaridContext::VaridContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> cliParserParser::VaridContext::LETTER() {
  return getTokens(cliParserParser::LETTER);
}

tree::TerminalNode* cliParserParser::VaridContext::LETTER(size_t i) {
  return getToken(cliParserParser::LETTER, i);
}


size_t cliParserParser::VaridContext::getRuleIndex() const {
  return cliParserParser::RuleVarid;
}

void cliParserParser::VaridContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarid(this);
}

void cliParserParser::VaridContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarid(this);
}


antlrcpp::Any cliParserParser::VaridContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitVarid(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::VaridContext* cliParserParser::varid() {
  VaridContext *_localctx = _tracker.createInstance<VaridContext>(_ctx, getState());
  enterRule(_localctx, 4, cliParserParser::RuleVarid);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(53); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(52);
              match(cliParserParser::LETTER);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(55); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

cliParserParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cliParserParser::FactorContext *> cliParserParser::TermContext::factor() {
  return getRuleContexts<cliParserParser::FactorContext>();
}

cliParserParser::FactorContext* cliParserParser::TermContext::factor(size_t i) {
  return getRuleContext<cliParserParser::FactorContext>(i);
}

std::vector<tree::TerminalNode *> cliParserParser::TermContext::MULT() {
  return getTokens(cliParserParser::MULT);
}

tree::TerminalNode* cliParserParser::TermContext::MULT(size_t i) {
  return getToken(cliParserParser::MULT, i);
}

std::vector<tree::TerminalNode *> cliParserParser::TermContext::DIV() {
  return getTokens(cliParserParser::DIV);
}

tree::TerminalNode* cliParserParser::TermContext::DIV(size_t i) {
  return getToken(cliParserParser::DIV, i);
}


size_t cliParserParser::TermContext::getRuleIndex() const {
  return cliParserParser::RuleTerm;
}

void cliParserParser::TermContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTerm(this);
}

void cliParserParser::TermContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTerm(this);
}


antlrcpp::Any cliParserParser::TermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitTerm(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::TermContext* cliParserParser::term() {
  TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, getState());
  enterRule(_localctx, 6, cliParserParser::RuleTerm);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    factor();
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == cliParserParser::MULT

    || _la == cliParserParser::DIV) {
      setState(58);
      _la = _input->LA(1);
      if (!(_la == cliParserParser::MULT

      || _la == cliParserParser::DIV)) {
      _errHandler->recoverInline(this);
      } else {
        consume();
      }
      setState(59);
      factor();
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FactorContext ------------------------------------------------------------------

cliParserParser::FactorContext::FactorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cliParserParser::FactorContext::NUMBER() {
  return getToken(cliParserParser::NUMBER, 0);
}


size_t cliParserParser::FactorContext::getRuleIndex() const {
  return cliParserParser::RuleFactor;
}

void cliParserParser::FactorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFactor(this);
}

void cliParserParser::FactorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFactor(this);
}


antlrcpp::Any cliParserParser::FactorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitFactor(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::FactorContext* cliParserParser::factor() {
  FactorContext *_localctx = _tracker.createInstance<FactorContext>(_ctx, getState());
  enterRule(_localctx, 8, cliParserParser::RuleFactor);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(cliParserParser::NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bool_Context ------------------------------------------------------------------

cliParserParser::Bool_Context::Bool_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cliParserParser::Bool_Context::TRUE() {
  return getToken(cliParserParser::TRUE, 0);
}

tree::TerminalNode* cliParserParser::Bool_Context::FALSE() {
  return getToken(cliParserParser::FALSE, 0);
}


size_t cliParserParser::Bool_Context::getRuleIndex() const {
  return cliParserParser::RuleBool_;
}

void cliParserParser::Bool_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBool_(this);
}

void cliParserParser::Bool_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBool_(this);
}


antlrcpp::Any cliParserParser::Bool_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitBool_(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::Bool_Context* cliParserParser::bool_() {
  Bool_Context *_localctx = _tracker.createInstance<Bool_Context>(_ctx, getState());
  enterRule(_localctx, 10, cliParserParser::RuleBool_);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    _la = _input->LA(1);
    if (!(_la == cliParserParser::TRUE

    || _la == cliParserParser::FALSE)) {
    _errHandler->recoverInline(this);
    } else {
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparMContext ------------------------------------------------------------------

cliParserParser::ComparMContext::ComparMContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cliParserParser::ExprMContext *> cliParserParser::ComparMContext::exprM() {
  return getRuleContexts<cliParserParser::ExprMContext>();
}

cliParserParser::ExprMContext* cliParserParser::ComparMContext::exprM(size_t i) {
  return getRuleContext<cliParserParser::ExprMContext>(i);
}

tree::TerminalNode* cliParserParser::ComparMContext::EQ() {
  return getToken(cliParserParser::EQ, 0);
}


size_t cliParserParser::ComparMContext::getRuleIndex() const {
  return cliParserParser::RuleComparM;
}

void cliParserParser::ComparMContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparM(this);
}

void cliParserParser::ComparMContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparM(this);
}


antlrcpp::Any cliParserParser::ComparMContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitComparM(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::ComparMContext* cliParserParser::comparM() {
  ComparMContext *_localctx = _tracker.createInstance<ComparMContext>(_ctx, getState());
  enterRule(_localctx, 12, cliParserParser::RuleComparM);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    exprM();
    setState(70);
    match(cliParserParser::EQ);
    setState(71);
    exprM();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparSContext ------------------------------------------------------------------

cliParserParser::ComparSContext::ComparSContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cliParserParser::StringContext *> cliParserParser::ComparSContext::string() {
  return getRuleContexts<cliParserParser::StringContext>();
}

cliParserParser::StringContext* cliParserParser::ComparSContext::string(size_t i) {
  return getRuleContext<cliParserParser::StringContext>(i);
}

tree::TerminalNode* cliParserParser::ComparSContext::EQ() {
  return getToken(cliParserParser::EQ, 0);
}


size_t cliParserParser::ComparSContext::getRuleIndex() const {
  return cliParserParser::RuleComparS;
}

void cliParserParser::ComparSContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparS(this);
}

void cliParserParser::ComparSContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparS(this);
}


antlrcpp::Any cliParserParser::ComparSContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitComparS(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::ComparSContext* cliParserParser::comparS() {
  ComparSContext *_localctx = _tracker.createInstance<ComparSContext>(_ctx, getState());
  enterRule(_localctx, 14, cliParserParser::RuleComparS);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    string();
    setState(74);
    match(cliParserParser::EQ);
    setState(75);
    string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparContext ------------------------------------------------------------------

cliParserParser::ComparContext::ComparContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cliParserParser::ComparSContext* cliParserParser::ComparContext::comparS() {
  return getRuleContext<cliParserParser::ComparSContext>(0);
}

cliParserParser::ComparMContext* cliParserParser::ComparContext::comparM() {
  return getRuleContext<cliParserParser::ComparMContext>(0);
}


size_t cliParserParser::ComparContext::getRuleIndex() const {
  return cliParserParser::RuleCompar;
}

void cliParserParser::ComparContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompar(this);
}

void cliParserParser::ComparContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompar(this);
}


antlrcpp::Any cliParserParser::ComparContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitCompar(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::ComparContext* cliParserParser::compar() {
  ComparContext *_localctx = _tracker.createInstance<ComparContext>(_ctx, getState());
  enterRule(_localctx, 16, cliParserParser::RuleCompar);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case cliParserParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(77);
        comparS();
        break;
      }

      case cliParserParser::NUMBER: {
        enterOuterAlt(_localctx, 2);
        setState(78);
        comparM();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicopsContext ------------------------------------------------------------------

cliParserParser::LogicopsContext::LogicopsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cliParserParser::LogicopsContext::AND() {
  return getToken(cliParserParser::AND, 0);
}

tree::TerminalNode* cliParserParser::LogicopsContext::OR() {
  return getToken(cliParserParser::OR, 0);
}


size_t cliParserParser::LogicopsContext::getRuleIndex() const {
  return cliParserParser::RuleLogicops;
}

void cliParserParser::LogicopsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicops(this);
}

void cliParserParser::LogicopsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicops(this);
}


antlrcpp::Any cliParserParser::LogicopsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitLogicops(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::LogicopsContext* cliParserParser::logicops() {
  LogicopsContext *_localctx = _tracker.createInstance<LogicopsContext>(_ctx, getState());
  enterRule(_localctx, 18, cliParserParser::RuleLogicops);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _la = _input->LA(1);
    if (!(_la == cliParserParser::AND

    || _la == cliParserParser::OR)) {
    _errHandler->recoverInline(this);
    } else {
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssgnmntContext ------------------------------------------------------------------

cliParserParser::AssgnmntContext::AssgnmntContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cliParserParser::VaridContext* cliParserParser::AssgnmntContext::varid() {
  return getRuleContext<cliParserParser::VaridContext>(0);
}

tree::TerminalNode* cliParserParser::AssgnmntContext::ASSGNMNT() {
  return getToken(cliParserParser::ASSGNMNT, 0);
}

cliParserParser::StatContext* cliParserParser::AssgnmntContext::stat() {
  return getRuleContext<cliParserParser::StatContext>(0);
}


size_t cliParserParser::AssgnmntContext::getRuleIndex() const {
  return cliParserParser::RuleAssgnmnt;
}

void cliParserParser::AssgnmntContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssgnmnt(this);
}

void cliParserParser::AssgnmntContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssgnmnt(this);
}


antlrcpp::Any cliParserParser::AssgnmntContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitAssgnmnt(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::AssgnmntContext* cliParserParser::assgnmnt() {
  AssgnmntContext *_localctx = _tracker.createInstance<AssgnmntContext>(_ctx, getState());
  enterRule(_localctx, 20, cliParserParser::RuleAssgnmnt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    varid();
    setState(84);
    match(cliParserParser::ASSGNMNT);
    setState(85);
    stat();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RedirContext ------------------------------------------------------------------

cliParserParser::RedirContext::RedirContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cliParserParser::RedirContext::RED() {
  return getToken(cliParserParser::RED, 0);
}

tree::TerminalNode* cliParserParser::RedirContext::REDD() {
  return getToken(cliParserParser::REDD, 0);
}


size_t cliParserParser::RedirContext::getRuleIndex() const {
  return cliParserParser::RuleRedir;
}

void cliParserParser::RedirContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRedir(this);
}

void cliParserParser::RedirContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRedir(this);
}


antlrcpp::Any cliParserParser::RedirContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitRedir(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::RedirContext* cliParserParser::redir() {
  RedirContext *_localctx = _tracker.createInstance<RedirContext>(_ctx, getState());
  enterRule(_localctx, 22, cliParserParser::RuleRedir);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    _la = _input->LA(1);
    if (!(_la == cliParserParser::RED

    || _la == cliParserParser::REDD)) {
    _errHandler->recoverInline(this);
    } else {
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BackgrndContext ------------------------------------------------------------------

cliParserParser::BackgrndContext::BackgrndContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cliParserParser::BackgrndContext::BACKGrnd() {
  return getToken(cliParserParser::BACKGrnd, 0);
}


size_t cliParserParser::BackgrndContext::getRuleIndex() const {
  return cliParserParser::RuleBackgrnd;
}

void cliParserParser::BackgrndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBackgrnd(this);
}

void cliParserParser::BackgrndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cliParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBackgrnd(this);
}


antlrcpp::Any cliParserParser::BackgrndContext::accept(tree::ParseTreeVisitor *visitor) {
  if (dynamic_cast<cliParserVisitor*>(visitor) != nullptr)
    return ((cliParserVisitor *)visitor)->visitBackgrnd(this);
  else
    return visitor->visitChildren(this);
}

cliParserParser::BackgrndContext* cliParserParser::backgrnd() {
  BackgrndContext *_localctx = _tracker.createInstance<BackgrndContext>(_ctx, getState());
  enterRule(_localctx, 24, cliParserParser::RuleBackgrnd);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(cliParserParser::BACKGrnd);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommandContext ------------------------------------------------------------------

cliParserParser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cliParserParser::CommandContext::ECHO() {
  return getToken(cliParserParser::ECHO, 0);
}

cliParserParser::StringContext* cliParserParser::CommandContext::string() {
  return getRuleContext<cliParserParser::StringContext>(0);
}

std::vector<cliParserParser::VaridContext *> cliParserParser::CommandContext::varid() {
  return getRuleContexts<cliParserParser::VaridContext>();
}

cliParserParser::VaridContext* cliParserParser::CommandContext::varid(size_t i) {
  return getRuleContext<cliParserParser::VaridContext>(i);
}

std::vector<cliParserParser::ExprMContext *> cliParserParser::CommandContext::exprM() {
  return getRuleContexts<cliParserParser::ExprMContext>();
}

cliParserParser::ExprMContext* cliParserParser::CommandContext::exprM(size_t i) {
  return getRuleContext<cliParserParser::ExprMContext>(i);
}

std::vector<cliParserParser::StatContext *> cliParserParser::CommandContext::stat() {
  return getRuleContexts<cliParserParser::StatContext>();
}

cliParserParser::StatContext* cliParserParser::CommandContext::stat(size_t i) {
  return getRuleContext<cliParserParser::StatContext>(i);
}

tree::TerminalNode* cliParserParser::CommandContext::BACKGrnd() {
  return getToken(cliParserParser::BACKGrnd, 0);
}
